force-app/main/default/objects/WBS_Template__c/WBS_Template__c.object-meta.xml
<CustomObject>
    <description>Reusable WBS schedule template. Instantiated onto a Project by WBSTemplateService.</description>
    <label>WBS Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WBS Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>